--- a/css/_navbar.css
+++ b/css/_navbar.css
@@ -2,6 +2,7 @@
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
     background-color: #fff;
     transition: background-color 0.2s ease;
+
     }
 
 .fixed-top {
@@ -14,17 +15,18 @@
 
 
 
-.navbar-light .navbar-nav .nav-link {
-    color: rgba(0,0,0,.5)
-}
 
+
+.navbar-scrolled {
+    color: rgba(0,0,0,.5) !important;
+}
 
 
 @media (min-width: 992px){
 #mainNav {
     box-shadow: none;
     background-color: transparent;
-}
+  }
 }
 
 
@@ -33,8 +35,12 @@
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
     background-color: #fff;
     height: 3rem;
-    color: rgba(0,0,0,.5);
+  }
 }
 
-}
 
+@media (max-width: 528px) {
+  .navbar-nav a {
+   color: black !important;
+  }
+}
