--- a/css/_navbar.css
+++ b/css/_navbar.css
@@ -1,6 +1,6 @@
 #mainNav {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    background-color: #fff;
+    background-color: #f4f7f5;
     transition: background-color 0.2s ease;
   }
 
@@ -28,21 +28,25 @@
     box-shadow: none;
     background-color: transparent;
   }
+
+
 }
 
 
 @media (min-width: 992px){
 #mainNav.navbar-scrolled {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .15);
-    background-color: #fff;
+    background-color: #f4f7f5;
     height: 3rem;
   }
+
 }
 
 
-@media (max-width: 528px) {
+@media (max-width: 992px) {
 
   .navbar-nav a {
    color: rgba(0, 0, 0, 0.5) !important;
   }
 }
+
