--- a/css/_projects.css
+++ b/css/_projects.css
@@ -1,9 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-
-}
 
 a:hover{
   background-color: none
@@ -15,7 +9,7 @@ text-decoration: none;
 }
 
 .card_category {
-  font-size: 29px;
+  font-size: 28px;
   color: black
 }
 
@@ -55,7 +49,7 @@ text-decoration: none;
 }
 
 .cards_wrap .card_inner {
-  background: #fff;
+  background: #f4f7f5;
 }
 
 .cards_wrap .card_top {
